v1.0/_sources/examples/plots/Simplified_Image_Plot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/plots/Simplified_Image_Plot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_plots_Simplified_Image_Plot.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plots_Simplified_Image_Plot.py:


Simple Plotting
===============

Demonstrate the use of MetPy's simplified plotting interface.

Plots a sample satellite image file.

.. GENERATED FROM PYTHON SOURCE LINES 12-32



.. image:: /examples/plots/images/sphx_glr_Simplified_Image_Plot_001.png
    :alt: IR
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Adjusting bad PDB size from 0 to 512.






|

.. code-block:: default


    import xarray as xr

    from metpy.cbook import get_test_data
    from metpy.io import GiniFile
    from metpy.plots import ImagePlot, MapPanel, PanelContainer

    data = xr.open_dataset(GiniFile(get_test_data('NHEM-MULTICOMP_1km_IR_20151208_2100.gini')))

    img = ImagePlot()
    img.data = data
    img.field = 'IR'
    img.colormap = 'Greys_r'

    panel = MapPanel()
    panel.plots = [img]

    pc = PanelContainer()
    pc.panels = [panel]
    pc.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.572 seconds)


.. _sphx_glr_download_examples_plots_Simplified_Image_Plot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Simplified_Image_Plot.py <Simplified_Image_Plot.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Simplified_Image_Plot.ipynb <Simplified_Image_Plot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
